# Flow 2 - Busca parametrizada via env.
# Pode rodar com outro termo: maestro test flows/02-search.yaml -e SEARCH_TERM=Avatar
appId: com.puciec.cinefav
env:
  SEARCH_TERM: "Matrix"
---
- launchApp
- tapOn:
    id: "login-email-input"
- inputText: "aluno@puc.br"
- tapOn:
    id: "login-password-input"
- inputText: "1234"
- tapOn:
    id: "login-submit-button"
- assertVisible:
    id: "movielist-screen"
- tapOn:
    id: "movielist-search-button"
- assertVisible:
    id: "search-screen"
- tapOn:
    id: "search-input"
- inputText: ${SEARCH_TERM}
- assertVisible: ${SEARCH_TERM}
