# Flow 5 - JavaScript embutido com evalScript.
appId: com.puciec.cinefav
---
- launchApp
- tapOn:
    id: "login-email-input"
- inputText: "aluno@puc.br"
- tapOn:
    id: "login-password-input"
- inputText: "1234"
- tapOn:
    id: "login-submit-button"
- assertVisible:
    id: "movielist-screen"
- evalScript: ${output.termo = ['Matrix', 'Avatar', 'Interestelar'][Math.floor(Math.random() * 3)]}
- tapOn:
    id: "movielist-search-button"
- assertVisible:
    id: "search-screen"
- tapOn:
    id: "search-input"
- inputText: ${output.termo}
- assertVisible: ${output.termo}
